--- a/neom/index.html
+++ b/neom/index.html
@@ -9,5 +9,9 @@
     <h1>hello world</h1>
     <h1>modify</h1>
     <header>header</header>
+    <div class="silder">
+        <h1>slider one</h1>
+        <h2>slider two</h2>
+    </div>
 </body>
 </html>
