--- a/neom/index.html
+++ b/neom/index.html
@@ -12,6 +12,7 @@
     <div class="silder">
         <h1>slider one</h1>
         <h2>slider two</h2>
+        <h3>slider three</h3>
     </div>
     <footer>
        footer
