--- a/jadi/index.html
+++ b/jadi/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi my name is Amirabbas and I am 27 years old</h1>
+    <h1>Hi my name is Amirabbas </h1>
 </body>
 </html>
