--- a/jadi/index.html
+++ b/jadi/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Hi my name is Amirabbas </h1>
+    <a href="page1.html">1</a>
+    <a href="page2.html">2</a>
+    <a href="page3.html">3</a>
+
 </body>
 </html>
