added age to h1

--- a/jadi/index.html
+++ b/jadi/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello my name is Amirabbas</h1>
+    <h1>Hello my name is Amirabbas Iam 27 years old</h1>
 </body>
 </html>
