added welcome to html pages

--- a/jadi/page1.html
+++ b/jadi/page1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Welcome</p>
+    <p>Welcome to page 1</p>
     <h2>this is a page 1</h2>
 </body>
 </html>
