--- a/jadi/page3.html
+++ b/jadi/page3.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Welcome</p>
+    <p>Welcome to page 1</p>
     <h1>this is a page 3</h1>
 </body>
 </html>
