--- a/jadi/page2.html
+++ b/jadi/page2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Welcome</p>
+    <p>Welcome to page 2</p>
     <h2>this is a page 2</h2>
 </body>
 </html>
